stop fade of alerts in export modal and added word wrap

--- a/app/resources/styles/sass/app.scss
+++ b/app/resources/styles/sass/app.scss
@@ -179,3 +179,7 @@ main footer {
 .tabbed {
   margin-left: 15px;
 }
+
+.alert-wrapper {
+  word-wrap: break-word;
+}
